// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSingleInput Component matches snapshot with default props 1`] = `
<button
  class="sc-bRKDuR hwZkvp"
  data-testid="button-single-input"
  rounded="default"
  type="button"
>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 25 25"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.19236 8.1636L4.25586 7.1001L12.5001 15.3443L20.7444 7.1001L21.8079 8.1636L12.5001 17.4713L3.19236 8.1636Z"
      fill="#F6F6F6"
    />
  </svg>
   
  Snapshot Button
</button>
`;

exports[`ButtonSingleInput Component matches snapshot with variant "bordered" and rounded "md" 1`] = `
<button
  class="sc-bRKDuR hWjZgV"
  data-testid="button-single-input"
  rounded="md"
  type="button"
>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 25 25"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.19236 8.1636L4.25586 7.1001L12.5001 15.3443L20.7444 7.1001L21.8079 8.1636L12.5001 17.4713L3.19236 8.1636Z"
      fill="#F6F6F6"
    />
  </svg>
   
  Bordered Button
</button>
`;
